# bigram_jax

./: .gitignore  README.md  bigram_jax.py  bigram_nb.ipynb  hello.py  pyproject.toml
